[package]
name = "random-sample"
version = "0.1.0"
authors = ["chansuke <chansuke@georepublic.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
env_logger = "0.5"
dotenv = "0.13"
hyper = "0.12"
rand = "0.5"
